# ObtainEngine

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  VulkanTemplate.sln  VulkanTemplate.vcxproj  VulkanTest  compile-shaders.sh  main.cpp  run.sh
libs/headeronly/: stb_image.h
src/: main.cpp
src/graphics/: renderer.hpp
src/graphics/vulkan/: allocator.cpp  allocator.hpp  buffer.cpp  buffer.hpp  command.hpp  device.cpp  device.hpp  image.hpp  memory-block.cpp  memory-block.hpp  memory-type.cpp  memory-type.hpp  memory.hpp  model.cpp  model.hpp  object-registry.cpp  object-registry.hpp  object.cpp  object.hpp  queue-family-indices.hpp  shader.hpp  swapchain-support-details.hpp  swapchain.cpp  swapchain.hpp  uniform-buffer-object.hpp  validation.cpp  validation.hpp  vertex.hpp  vulkan-renderer.cpp  vulkan-renderer.hpp
src/renderer/: queuefamilyindices.h  queuefamilyindices.hpp  renderer.cpp  renderer.hpp  swapchainsupportdetails.h  swapchainsupportdetails.hpp  uniformbufferobject.h  uniformbufferobject.hpp  vertex.h  vertex.hpp  vulkanrenderer.cpp  vulkanrenderer.h  vulkanrenderer.hpp
src/renderer/shaders/: basic.frag  basic.vert  shader.frag  shader.vert
src/renderer/vulkan/: buffer.cpp  buffer.hpp  command.cpp  command.hpp  descriptor.cpp  descriptor.hpp  device.cpp  device.hpp  graphicspipeline.cpp  graphicspipeline.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  model.cpp  model.hpp  object.cpp  object.hpp  old_cpp.bak  old_h.bak  pipeline.cpp  pipeline.hpp  queue-family-indices.hpp  queuefamilyindices.hpp  shader.cpp  shader.hpp  swapchain-support-details.hpp  swapchain.cpp  swapchain.hpp  swapchainsupportdetails.hpp  uniform-buffer-object.hpp  uniformbufferobject.hpp  validation.cpp  validation.hpp  vertex.hpp  vertex2d.hpp  vulkan-renderer.cpp  vulkan-renderer.hpp  vulkanrenderer.cpp  vulkanrenderer.hpp
src/utils/: time.cpp  time.hpp
